# spotipy

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGES.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  EXAMPLES.md  FAQ.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  Spotify App Directions.md  TUTORIAL.md  deploy  oauth2.py  pyproject.toml  pyvenv.cfg  redirect_page.md  requirements.txt  setup.py  spotipy.py  test.py  tox.ini
.codeboarding/: Authentication Manager.md  Cache Management.md  Error Handling.md  Local HTTP Server.md  Spotify API Client.md  Utility & Helpers.md  on_boarding.md
.github/: SECURITY.md
START HERE/: CONTRIBUTING.md
contoh/: add_tracks_to_playlist.py
docs/: Makefile  authorization.rst  conf.py  env_variable_setup.rst  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  spotipy.rst
espanol/: CONTRIBUTING _Espanol.md  FAQ _Espanol.md  README_Espanol.md
examples/: add_a_saved_album.py  add_a_saved_track.py  add_saved_episodes.py  add_saved_shows.py  add_tracks_to_playlist.py  app.py  artist_albums.py  artist_discography.py  artist_recommendations.py  audio_analysis_for_track.py  audio_features.py  audio_features2.py  audio_features_analysis.py  audio_features_for_track.py  change_playlist_details.py  check_show_is_saved.py  client_credentials_flow.py  collaborations.py  contains_a_saved_track.py  create_playlist.py  deadmau5.gv  delete_a_saved_track.py  delete_playlist.py  delete_saved_episodes.py  errors.py  headless.py  (+60 more)
(+74 files in other folders)
