[project]
name = "spotipy"
version = "2.24.0"
description = "A light weight Python library for the Spotify Web API"
authors = [
    { name = "@plamere", email = "paul@echonest.com" }
]
readme = "README.md"
urls = { "homepage" = "https://spotipy.readthedocs.org/", "source" = "https://github.com/plamere/spotipy" }
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "redis>=3.5.3",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
    "pymemcache>=4.0.0",
]


[project.optional-dependencies]
memcache = ["pymemcache>=3.5.2"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
dev-dependencies = [
    "mypy>=1.11.1",
    "pylint>=3.2.6",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "autopep8>=2.3.1",
    "pyupgrade>=3.16.0",
]

